--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Phil's Status</title>
+	<title>Phil Collins Status</title>
 	<link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 	<body>
