--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 	<body>
-		<h1>Phil Collins is <span id="status">Alive</span></h1>
+		<h1>Phil Collins is <span id="status">alive</span></h1>
 		<script src="philStatus.js"></script>
 	</body>
 </html>
