--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <head>
 	<title>Phil Collins Status</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-143544698-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-143544698-1');
+	</script>
+
 </head>
 	<body>
 		<h1>Phil Collins is <span id="status">alive</span></h1>
